--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <div class="logo">
                 <a href="#">Rubén Montes</a>
             </div>
-            <nav id="nav">
+           
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                      
-                        <button class="navbar-toggler btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                        <button class="btn btn-success navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon btn btn-success  "></span>
                           </button>
                       <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
