--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="container">
     <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
